fix(ui5-checkbox): vertical misalignment when wrap is true
- redundant CSS styling is removed which was causing the issue

--- a/packages/main/src/themes/CheckBox.css
+++ b/packages/main/src/themes/CheckBox.css
@@ -26,7 +26,6 @@
 :host([wrap][text]) .ui5-checkbox-root {
 	min-height: auto;
 	box-sizing: border-box;
-	align-items: flex-start;
 	padding-top: var(--_ui5_checkbox_root_side_padding);
 	padding-bottom: var(--_ui5_checkbox_root_side_padding);
 }
